--- a/KOMABA2015/TaroNakamura(TN).tex
+++ b/KOMABA2015/TaroNakamura(TN).tex
@@ -186,8 +186,20 @@ $\left(de\right)e-ede=\left({\bf 1}-2e\right)de$
 \begin{center}
 $df:=Df-fD$
 \end{center}
-により定める.これは先の「微分」がもつべき性質を満たしている.
+により定める.これは先の「微分」がもつべき性質を満たしている.\\
+　先の2点空間上の関数のなす$C^*$-環は$\mathbb{C}^2$上の有界線型作用素のなす$C^*$-環$\mathcal{B}\left(\mathbb{C}^2\right)=M\left(2;\mathbb{C}\right)$と対応している.$f=\alpha e+\beta \left({\bf 1}-e\right)$は$M\left(2;\mathbb{C}\right)$の元の中で対角成分が$\alpha,\beta$である2次対角行列に対応している.これに対して適当に対角行列でない行列をとり,それを$D$とすれば,dfは先の定義で確かに微分になる（興味のある方は計算してみてください）.
+\Subsection{非可換トーラス}
+　先のn点空間は微分を考えれば非可換になったが,関数の積自体は可換で,点も具体的に考えられた（$C^*$-環から構成せずに直接空間を定義したので当然ではあるが…）そこでもう少し複雑な例を見ることにしよう.通常のトーラスをもとにした非可換トーラスを考えることができる.簡単のため2次元での「お話」のみを紹介する.トーラス上の関数は周期関数であるから,2次元トーラス上の関数は座標を$\left(x,y\right)$として
+\begin{center}
+$f=\sum_{k,l} a_{kl}e^{ikx}e^{ily}$
+\end{center}
+と書くことができる.この$e^{ix},e^{iy}$に対し,非可換積を
+\begin{center}
+$e^{ix}*e^{iy}=e^{i\theta}e^{iy}*e^{ix}$
+\end{center}
+などで定めて,$e^{ix},e^{iy}$により生成される代数は非可換である.これに対応する非可換空間を非可換トーラスと定める.
 \Section{あとがき}
+　ここまで$C^*$-環から始まって.非可換空間の紹介までしてきましたが,そんなもの何に使うの？という話だけを最期に少しさせていただきます.先に述べた通り,まず物理の量子力学とかかわりがあるのでそちらへの応用が期待されます.また,先のN点空間上の話は格子空間（これは$N^4$点空間です）について,その上で微分を考えると非可換が表れてしまうことを意味しています.さらには超弦理論も非可換幾何学の性質を持つと言われています.こうした物理学やその背後によって導かれたその先に,非可換幾何学の世界が待っている…のかもしれません.
 　あまり「非可換幾何学」及びその入り口に具体的に触れる,ということはできませんでしたが,作用素環の基礎からはじめて非可換幾何学の着想の元となる定理までを紹介いたしました.少しでもその雰囲気を味わっていただけたなら幸いです.
 
 \Subsubsection{参考文献}
@@ -196,4 +208,6 @@ $df:=Df-fD$
 \item{[2]}Shoichiro Sakai「$C^★$-Algebras and $W^★$-Algebras」,Springer
 \item{[3]}梅垣壽春,大矢雅則,日合文雄「復刊 作用素代数入門」,共立出版株式会社
 \item{[4]}生西明夫,中神祥臣「作用素環入門I　函数解析とフォン・ノイマン環」,岩波書店
+\item{[5]}竹崎正道,「作用素環の構造」,岩波書店
+\item{[6]}綿村哲「非可換幾何学と場の理論」日本物理学会誌vol55,No10,2000
 \end{description}
