--- a/KOMABA2015/TaroNakamura(TN).tex
+++ b/KOMABA2015/TaroNakamura(TN).tex
@@ -137,7 +137,7 @@ $\left(\eta_{\omega}\left(x\right)|\eta_{\omega}\left(y\right)\right)=\omega\lef
 \begin{theo}
 任意の$C^*$-環$A$の普遍表現は忠実である.特に,$A$の忠実な表現が存在する.したがって,任意の$C^*$-環$A$はある{\rm Hilbert}空間$\mathfrak{H}$上の有界線型作用素のなす$C^*$-環$\mathcal{B}\left(\mathfrak{H}\right)$と等距離*-同型である.
 \end{theo}
-　これで可換とは限らない任意の$C^*$-環があるHilbert空間上の有界線型作用素のなす$C^*$-環と対応付けられることがわかった.実はHilbert空間は量子力学が展開される空間であり,有界線型作用素は量子力学における物理量を表す役割を果たしている.作用素の積は一般に非可換であり,その非可換性が実際に物理学の中で大きな役割を果たしている.したがって,そのような意味で非可換な$C^*$-環は非可換な量子力学的空間と対応しているとみなせる.なお,状態という言葉は量子力学に由来する.\\
+　これで可換とは限らない任意の$C^*$-環があるHilbert空間上の有界線型作用素のなす$C^*$-環と対応付けられることがわかった.実はHilbert空間は量子力学が展開される空間であり,有界線型作用素は量子力学における物理量を表す役割を果たしている.作用素の積は一般に非可換であり,その非可換性が実際に物理学の中で大きな役割を果たしている.したがって,そのような意味で非可換な$C^*$-環は非可換な「量子的」な空間と対応しているとみなせる.なお,状態という言葉は量子力学に由来する.\\
 　その他の例として,局所コンパクト空間上の力学系を考えると,図形の空間的な情報と力学系による時間発展の情報の両方を持つ非可換なC*-環が得られる.\\
 　このように非可換な$C^*$-環は非可換な空間の情報を持ったものであり,それを調べることにより,「非可換な空間」を得ることができる.
 \Section{非可換空間の例}
