--- a/KOMABA2015/TaroNakamura(TN).tex
+++ b/KOMABA2015/TaroNakamura(TN).tex
@@ -155,7 +155,7 @@ $e_{ji}^*=e_{ij},　e_{kj}e_{ji}=e_{ki}$
 \begin{center}
 $f\left(a\right)=\alpha,　f\left(b\right)=\beta$
 \end{center}
-で定める.ここで定数関数${\bf 1}:a,b\mapsto 1$と$a$で$1$,$b$で$0$という値を取る関数$e$を考えれば,2点空間上の任意の関数は
+で定める.ここで定数関数${\bf 1}:a,b\mapsto 1$と,$a$で$1$,$b$で$0$という値を取る関数$e$を考えれば,2点空間上の任意の関数は
 \begin{center}
 $f=\alpha e+\beta \left({\bf 1}-e\right)$
 \end{center}
