--- a/KOMABA2015/TaroNakamura(TN).tex
+++ b/KOMABA2015/TaroNakamura(TN).tex
@@ -168,7 +168,7 @@ $f=\alpha e+\beta \left({\bf 1}-e\right)$
 \end{itemize}
 このような規則をみたす「微分」が定義できると,上で定めた関数$f=\alpha e+\beta \left({\bf 1}-e\right)$の「微分」は
 \begin{center}
-$df=\left(\alpha-\beta\right)$
+$df=\left(\alpha-\beta\right)de$
 \end{center}
 となる.\\
 　さて,ここで$f$として$e^2$を考えよう.定義から明らかに$e^2=e$である.この両辺を「微分」すると
