--- a/KOMABA2015/TaroNakamura(TN).tex
+++ b/KOMABA2015/TaroNakamura(TN).tex
@@ -191,7 +191,7 @@ $df:=Df-fD$
 \Subsection{非可換トーラス}
 　先のn点空間は微分を考えれば非可換になったが,関数の積自体は可換で,点も具体的に考えられた（$C^*$-環から構成せずに直接空間を定義したので当然ではあるが…）そこでもう少し複雑な例を見ることにしよう.通常のトーラスをもとにした非可換トーラスを考えることができる.簡単のため2次元での「お話」のみを紹介する.トーラス上の関数は周期関数であるから,2次元トーラス上の関数は座標を$\left(x,y\right)$として
 \begin{center}
-$f=\sum_{k,l} a_{kl}e^{ikx}e^{ily}$
+$f\left(x,y\right)=\sum_{k,l} a_{kl}e^{ikx}e^{ily}$
 \end{center}
 と書くことができる.この$e^{ix},e^{iy}$に対し,非可換積を
 \begin{center}
