--- a/KOMABA2015/TaroNakamura(TN).tex
+++ b/KOMABA2015/TaroNakamura(TN).tex
@@ -209,5 +209,5 @@ $e^{ix}*e^{iy}=e^{i\theta}e^{iy}*e^{ix}$
 \item{[3]}梅垣壽春,大矢雅則,日合文雄「復刊 作用素代数入門」,共立出版株式会社
 \item{[4]}生西明夫,中神祥臣「作用素環入門I　函数解析とフォン・ノイマン環」,岩波書店
 \item{[5]}竹崎正道,「作用素環の構造」,岩波書店
-\item{[6]}綿村哲「非可換幾何学と場の理論」日本物理学会誌vol55,No10,2000
+\item{[6]}綿村哲「非可換幾何学と場の理論」日本物理学会誌vol55,No10,2000,一般社団法人日本物理学会
 \end{description}
