--- a/KOMABA2015/TaroNakamura(TN).tex
+++ b/KOMABA2015/TaroNakamura(TN).tex
@@ -199,7 +199,7 @@ $e^{ix}*e^{iy}=e^{i\theta}e^{iy}*e^{ix}$
 \end{center}
 などで定めて,$e^{ix},e^{iy}$により生成される代数は非可換である.これに対応する非可換空間を非可換トーラスと定める.
 \Section{あとがき}
-　ここまで$C^*$-環から始まって.非可換空間の紹介までしてきましたが,そんなもの何に使うの？という話だけを最期に少しさせていただきます.先に述べた通り,まず物理の量子力学とかかわりがあるのでそちらへの応用が期待されます.また,先のN点空間上の話は格子空間（これは$N^4$点空間です）について,その上で微分を考えると非可換性が現れてしまうことを意味しています.さらには超弦理論も非可換幾何学の性質を持つと言われています.こうした物理学やその背後によって導かれたその先に,非可換幾何学の世界が待っている…のかもしれません.
+　ここまで$C^*$-環から始まって.非可換空間の紹介までしてきましたが,そんなもの何に使うの？という話だけを最期に少しさせていただきます.先に述べた通り,まず物理の量子力学とかかわりがあるのでそちらへの応用が期待されます.また,先のN点空間上の話は格子空間（これは$N^4$点空間です）について,その上で微分を考えると非可換性が現れてしまうことを意味しています.さらには超弦理論も非可換幾何学の性質を持つと言われています.こうした物理学やその背後によって導かれたその先に,非可換幾何学の世界が待っている…のかもしれません.\\
 　あまり「非可換幾何学」及びその入り口に具体的に触れる,ということはできませんでしたが,作用素環の基礎からはじめて非可換幾何学の着想の元となる定理までを紹介いたしました.少しでもその雰囲気を味わっていただけたなら幸いです.
 
 \Subsubsection{参考文献}
