--- a/KOMABA2015/TaroNakamura(TN).tex
+++ b/KOMABA2015/TaroNakamura(TN).tex
@@ -149,7 +149,7 @@ $\left(\eta_{\omega}\left(x\right)|\eta_{\omega}\left(y\right)\right)=\omega\lef
 \begin{center}
 $e_{ji}^*=e_{ij},　e_{kj}e_{ji}=e_{ki}$
 \end{center}
-となる.これはn次の行列単位（$\left(i,j\right)$-成分のみが1で他の成分はすべて0であるようなn次正方行列）に他ならない.こうしたn次行列単位全てを含むような$\mathbb{C}$上の最小の体系は複素数を成分とするn次正方行列の全体$M\left(n;\mathbb{C}\right)$である.従って,このようなn個の点からなる空間での点から点への運動の体系を記述する情報は$M\left(n;\mathbb{C}\right)$内に記録されているはずであろう.そして,$M\left(n;\mathbb{C}\right)$の最小性からこれより小さなものでは情報すべてを記録できない.この$M\left(n;\mathbb{C}\right)$は行列の和と積,複素数倍によりBanach環であり,対合として随伴行列,つまり$A\in M\left(n;\mathbb{C}\right)$の対合$A^*$を複素共役の転置行列$A^*={}^{t}\overline{A}$と定めると,$M\left(n;\mathbb{C}\right)$は非可換な$C^*$-環である.$M\left(n;\mathbb{C}\right)$はHilbert空間$\mathbb{C}^n$上の有界線型作用素のなす$C^*$-環である（Gelfand-Naimarkの定理その2.まぁ,使うまでもなくご存知の結果かもしれませんが…）.
+となる.これはn次の行列単位（$\left(i,j\right)$-成分のみが1で他の成分はすべて0であるようなn次正方行列）に他ならない.こうしたn次行列単位全てを含むような$\mathbb{C}$上の最小の体系は複素数を成分とするn次正方行列の全体$M\left(n;\mathbb{C}\right)$である.従って,このようなn個の点からなる空間での点から点への運動の体系を記述する情報は$M\left(n;\mathbb{C}\right)$内に記録されているはずであろう.そして,これより小さなものでは情報すべてを記録できない.この$M\left(n;\mathbb{C}\right)$は行列の和と積,複素数倍によりBanach環であり,対合として随伴行列,つまり$A\in M\left(n;\mathbb{C}\right)$の対合$A^*$を複素共役の転置行列$A^*={}^{t}\overline{A}$と定めると,$M\left(n;\mathbb{C}\right)$は非可換な$C^*$-環である.$M\left(n;\mathbb{C}\right)$はHilbert空間$\mathbb{C}^n$上の有界線型作用素のなす$C^*$-環である（Gelfand-Naimarkの定理その2.まぁ,使うまでもなくご存知の結果かもしれませんが…）.
 \Subsection{2点空間上の関数}
 　では,このn点空間の非可換性を見ていきたい.ここでは簡単のために$n=2$として2点空間$\{a,b\}$を考える.この空間の上で定義された関数を考えよう.とはいえ,2点しかない空間なのでa,bそれぞれに対して関数の値を決めればいい.2点空間$\{a,b\}$上の関数$f$を
 \begin{center}
@@ -187,7 +187,7 @@ $\left(de\right)e-ede=\left({\bf 1}-2e\right)de$
 $df:=Df-fD$
 \end{center}
 により定める.これは先の「微分」がもつべき性質を満たしている.\\
-　先の2点空間上の関数のなす$C^*$-環は$\mathbb{C}^2$上の有界線型作用素のなす$C^*$-環$\mathcal{B}\left(\mathbb{C}^2\right)=M\left(2;\mathbb{C}\right)$と対応している.$f=\alpha e+\beta \left({\bf 1}-e\right)$は$M\left(2;\mathbb{C}\right)$の元の中で対角成分が$\alpha,\beta$である2次対角行列に対応している.これに対して適当に対角行列でない行列をとり,それを$D$とすれば,dfは先の定義で確かに微分になる（興味のある方は計算してみてください）.
+　先の2点空間上の関数$f=\alpha e+\beta \left({\bf 1}-e\right)$は$M\left(2;\mathbb{C}\right)$の元の中の対角成分が$\alpha,\beta$である2次対角行列に対応している.これに対して適当に対角行列でない行列をとり,それを$D$とすれば,dfは先の定義で確かに微分になる（興味のある方は計算してみてください）.
 \Subsection{非可換トーラス}
 　先のn点空間は微分を考えれば非可換になったが,関数の積自体は可換で,点も具体的に考えられた（$C^*$-環から構成せずに直接空間を定義したので当然ではあるが…）そこでもう少し複雑な例を見ることにしよう.通常のトーラスをもとにした非可換トーラスを考えることができる.簡単のため2次元での「お話」のみを紹介する.トーラス上の関数は周期関数であるから,2次元トーラス上の関数は座標を$\left(x,y\right)$として
 \begin{center}
