--- a/KOMABA2015/TaroNakamura(TN).tex
+++ b/KOMABA2015/TaroNakamura(TN).tex
@@ -3,7 +3,7 @@
 　いきなりで申し訳ないのですが,本稿で非可換幾何学の理論を展開することはありません.タイトル詐欺もいいところですが,幾何と作用素環の間の対応を見て,そこから非可換幾何への着想を紹介いたします.\\
 　数学において,調べたい対象を別の何かと対応付け,対応付けたものを調べることで元の調べたい対象の性質がわかるようになる,ということはしばしばあります.例えば,それなりに良い性質を持つ幾何的な対象である局所コンパクトハウスドルフ空間というものを考えます.例えば,我々の住む空間である(と思われる)3次元実空間$\mathbb{R}^3$などがその例です.数直線や2次元平面も(通常の位相を考えれば)局所コンパクトハウスドルフ空間とみなせます.さて,この局所コンパクトハウスドルフ空間の上で連続関数を定義することができます.そのような連続関数すべてを集めてくると,その集合には関数の和と積,それから複素数倍を考えることができ,数学で「多元環」,「代数」などという構造が入ります.これを連続関数環といいますが,この代数的な「環」（正確には多元環）を調べることにより,元の空間の性質がよくわかる,ということが知られています.\\
 　この連続関数環は実は$C^*$-環というものの１つです.$C^*$-環はHilbert空間上の有界線型作用素のなす多元環ですが,その中でも可換（積の順序が交換可能）なもので,実は可換な$C^*$-環はある局所コンパクト空間上の連続関数環になります.従って一方を調べることはもう一方を調べることになります.\\
-　このような対応がありますが,$C^*$-環は可換なものだけでなく非可換なものがたくさん（それはもうたくさんです）あります.では,その非可換な$C^*$-環が可換なものと同じように幾何学的な何かに対応しているとしたら？対応している何かは「非可換」な「空間」はと呼ぶのがふさわしいでしょう.\\
+　このような対応がありますが,$C^*$-環は可換なものだけでなく非可換なものがたくさん（それはもうたくさんです）あります.では,その非可換な$C^*$-環が可換なものと同じように幾何学的な何かに対応しているとしたら？対応している何かは「非可換空間」と呼ぶのがふさわしいでしょう.\\
 　今回の記事ではこのようなお話について紹介させていただきます.なお,話題の紹介を優先したため,また紙面と執筆者の気力の都合もあり証明は省略しました.（興味を持っていただけた方は参考文献を参照してください）
 \Section{$C^*$-環}
 　以下では少々式を用いて作用素環論の基礎を述べる.よくわからないという方は流し読みで雰囲気だけでも感じてもらえると幸いである.
@@ -37,7 +37,7 @@ b \\
 \item $\parallel x^*\parallel=\parallel x\parallel$
 \item $\parallel xx^*\parallel=\parallel x\parallel \parallel x^*\parallel$
 \end{itemize}
-写像$*:a \mapsto a^*$を\textgt{対合}という.$C^*$-環$A$の積が可換であるとき,$A$は\textgt{可換}であるという.また,$A$が積について単位元をもつとき,$A$は\textgt{unital}であるという.
+写像$*:a \mapsto a^*$を\textgt{対合}という.$C^*$-環$A$の積が順序によらないとき,すなわち任意の$a,b\in A$に対し,$ab=ba$であるとき,$A$は\textgt{可換}であるという.また,$A$が積について単位元をもつとき,$A$は\textgt{unital}であるという.
 \Subsection{*-準同型写像}
 　$A,B$を$C^*$-環とする.写像$\pi:A \rightarrow B$が
 \begin{center}
