--- a/KOMABA2015/TaroNakamura(TN).tex
+++ b/KOMABA2015/TaroNakamura(TN).tex
@@ -145,7 +145,7 @@ $\left(\eta_{\omega}\left(x\right)|\eta_{\omega}\left(y\right)\right)=\omega\lef
 \Subsection{n個の点のなす空間}
 　一般の空間を考えてその上の運動を考えてもよいが、簡単のためにn個の点からなる空間を考えよう.一般の方のイメージする空間からはおよそかけ離れたものであるから,「空間」という言葉に抵抗のある方もいらっしゃるかもしれないが,そういう方はn箇所の駅からなる路線と各駅の間を電車が直通で結んでいるようなイメージなどをしてもらうといいかもしれない.\\
 \Subsection{点の運動}
-　各点に便宜上1,2,…nという名前を付けよう.この空間の中での運動を考える.各点iからi自身への運動,つまり運動とは書いているが静止したまま動かないこと,点iから点jへの運動が考えられる.また,点iから点jへの運動の「逆の運動」は点jから点iへの運動である.さらに運動の合成として,点iから点jへの運動と点jから点kへの運動の連続試行:点iから点kへの運動を考えよう.この運動の合成は,もちろん最初の運動の終点と次の運動の始点が同じでなければならないから一般には可換ではない.また,このような運動の中で禁止されているものはないとしよう.点iから点jへの運動を$e_{ji}$と表すことにして,これらのことを式で表すと
+　各点に便宜上1,2,…nという名前を付けよう.この空間の中での運動を考える.各点iからi自身への運動,つまり運動とは書いているが静止したまま動かないこと,点iから点jへの運動が考えられる.また,点iから点jへの運動の「逆の運動」は点jから点iへの運動である.さらに運動の合成として,点iから点jへの運動と点jから点kへの運動の連続試行:点iから点kへの運動を考えよう.また,このような運動の中で禁止されているものはないとしよう.点iから点jへの運動を$e_{ji}$と表すことにして,これらのことを式で表すと
 \begin{center}
 $e_{ji}^*=e_{ij},　e_{kj}e_{ji}=e_{ki}$
 \end{center}
