荒田の原稿追加。

--- a/KOMABA2015/main.tex
+++ b/KOMABA2015/main.tex
@@ -129,6 +129,17 @@
 \def\TO{\Rightarrow}
 \def\OT{\Leftarrow}
 
+% arata.tex
+\newcommand{\Complex}{\mathbf{C}}
+\newcommand{\ImagI}{i}%{\sqrt{-1}}%{\mathbf{i}}
+\newcommand{\abs}[1]{\left\lvert #1\right\rvert}
+\DeclareMathOperator{\RealPart}{Re}
+\theoremstyle{definition}
+\newtheorem{theorem}{定理}
+\theoremstyle{remark}
+\newtheorem{example}{例}
+
+
 %本文
 \begin{document}
 \frontmatter
@@ -140,6 +151,7 @@
 \input{asaka}
 \input{TaroNakamura(TN)}
 \input{ito}
+\input{arata}
 %\Chapter{編集後記}
 %\input{atogaki}
 
