--- a/KOMABA2015/TaroNakamura(TN).tex
+++ b/KOMABA2015/TaroNakamura(TN).tex
@@ -142,23 +142,17 @@ $\left(\eta_{\omega}\left(x\right)|\eta_{\omega}\left(y\right)\right)=\omega\lef
 　このように非可換な$C^*$-環は非可換な空間の情報を持ったものであり,それを調べることにより,「非可換な空間」を得ることができる.
 \Section{非可換空間の例}
 　ここまで非可換空間と非可換な$C^*$-環が対応するのだろう、という話を見てきたが、簡単な例を用いて実際に非可換な空間を考えて、$C^*$-環が現れることを見ることにする.
-\Subsection{n個の点のなす空間}
-　一般の空間を考えてその上の運動を考えてもよいが、簡単のためにn個の点からなる空間を考えよう.一般の方のイメージする空間からはおよそかけ離れたものであるから,「空間」という言葉に抵抗のある方もいらっしゃるかもしれないが,そういう方はn箇所の駅からなる路線と各駅の間を電車が直通で結んでいるようなイメージなどをしてもらうといいかもしれない.\\
+\Subsection{$n$ 個の点のなす空間}
+　一般の空間を考えてその上の運動を考えてもよいが、簡単のために $n$ 個の点からなる空間を考えよう.一般の方のイメージする空間からはおよそかけ離れたものであるから,「空間」という言葉に抵抗のある方もいらっしゃるかもしれないが,そういう方は $n$ 箇所の駅からなる路線と各駅の間を電車が直通で結んでいるようなイメージなどをしてもらうといいかもしれない.\\
 \Subsection{点の運動}
-　各点に便宜上1,2,…nという名前を付けよう.この空間の中での運動を考える.各点iからi自身への運動,つまり運動とは書いているが静止したまま動かないこと,点iから点jへの運動が考えられる.また,点iから点jへの運動の「逆の運動」は点jから点iへの運動である.さらに運動の合成として,点iから点jへの運動と点jから点kへの運動の連続試行:点iから点kへの運動を考えよう.また,このような運動の中で禁止されているものはないとしよう.点iから点jへの運動を$e_{ji}$と表すことにして,これらのことを式で表すと
-\begin{center}
-$e_{ji}^*=e_{ij},　e_{kj}e_{ji}=e_{ki}$
-\end{center}
-となる.これはn次の行列単位（$\left(i,j\right)$-成分のみが1で他の成分はすべて0であるようなn次正方行列）に他ならない.こうしたn次行列単位全てを含むような$\mathbb{C}$上の最小の体系は複素数を成分とするn次正方行列の全体$M\left(n;\mathbb{C}\right)$である.従って,このようなn個の点からなる空間での点から点への運動の体系を記述する情報は$M\left(n;\mathbb{C}\right)$内に記録されているはずであろう.そして,これより小さなものでは情報すべてを記録できない.この$M\left(n;\mathbb{C}\right)$は行列の和と積,複素数倍によりBanach環であり,対合として随伴行列,つまり$A\in M\left(n;\mathbb{C}\right)$の対合$A^*$を複素共役の転置行列$A^*={}^{t}\overline{A}$と定めると,$M\left(n;\mathbb{C}\right)$は非可換な$C^*$-環である.$M\left(n;\mathbb{C}\right)$はHilbert空間$\mathbb{C}^n$上の有界線型作用素のなす$C^*$-環である（Gelfand-Naimarkの定理その2.まぁ,使うまでもなくご存知の結果かもしれませんが…）.
+　各点に便宜上 $1,2,\dots,n$ という名前を付けよう.この空間の中での運動を考える.各点 $i$ から $i$ 自身への運動,つまり運動とは書いているが静止したまま動かないこと,点 $i$ から点 $j$ への運動が考えられる.また,点 $i$ から点 $j$ への運動の「逆の運動」は点 $j$ から点 $i$ への運動である.さらに運動の合成として,点 $i$ から点 $j$ への運動と点 $j$ から点 $k$ への運動の連続試行:点 $i$ から点 $k$ への運動を考えよう.また,このような運動の中で禁止されているものはないとしよう.点 $i$ から点 $j$ への運動を$e_{ji}$と表すことにして,これらのことを式で表すと
+\[e_{ji}^*=e_{ij},　e_{kj}e_{ji}=e_{ki}\]
+となる.これは $n$ 次の行列単位（$\left(i,j\right)$-成分のみが1で他の成分はすべて0であるような $n$ 次正方行列）に他ならない.こうした $n$ 次行列単位全てを含むような$\mathbb{C}$上の最小の体系は複素数を成分とする $n$ 次正方行列の全体$M\left(n;\mathbb{C}\right)$である.従って,このような $n$ 個の点からなる空間での点から点への運動の体系を記述する情報は$M\left(n;\mathbb{C}\right)$内に記録されているはずであろう.そして,これより小さなものでは情報すべてを記録できない.この$M\left(n;\mathbb{C}\right)$は行列の和と積,複素数倍によりBanach環であり,対合として随伴行列,つまり$A\in M\left(n;\mathbb{C}\right)$の対合$A^*$を複素共役の転置行列$A^*={}^{t}\overline{A}$と定めると,$M\left(n;\mathbb{C}\right)$は非可換な$C^*$-環である.$M\left(n;\mathbb{C}\right)$はHilbert空間$\mathbb{C}^n$上の有界線型作用素のなす$C^*$-環である（Gelfand-Naimarkの定理その2.まぁ,使うまでもなくご存知の結果かもしれませんが…）.
 \Subsection{2点空間上の関数}
 　では,このn点空間の非可換性を見ていきたい.ここでは簡単のために$n=2$として2点空間$\{a,b\}$を考える.この空間の上で定義された関数を考えよう.とはいえ,2点しかない空間なのでa,bそれぞれに対して関数の値を決めればいい.2点空間$\{a,b\}$上の関数$f$を
-\begin{center}
-$f\left(a\right)=\alpha,　f\left(b\right)=\beta$
-\end{center}
+\[f\left(a\right)=\alpha,　f\left(b\right)=\beta\]
 で定める.ここで定数関数${\bf 1}:a,b\mapsto 1$と,$a$で$1$,$b$で$0$という値を取る関数$e$を考えれば,2点空間上の任意の関数は
-\begin{center}
-$f=\alpha e+\beta \left({\bf 1}-e\right)$
-\end{center}
+\[f=\alpha e+\beta \left({\bf 1}-e\right)\]
 と表せる.このまま積を考えても所詮は2点空間なので可換であるが,仮に「微分」を定義できたとすると,2点空間は非可換になってしまう.
 \Subsection{非可換微分構造}
 　2点空間上の関数に「微分」$D$が定義できたとしよう.「微分」$D$は微分であるから,次の規則を満たさなければならないだろう.
@@ -167,39 +161,27 @@ $f=\alpha e+\beta \left({\bf 1}-e\right)$
 \item$D\left(fg\right)=\left(Df\right)g+f\left(Dg\right)$
 \end{itemize}
 このような規則をみたす「微分」が定義できると,上で定めた関数$f=\alpha e+\beta \left({\bf 1}-e\right)$の「微分」は
-\begin{center}
-$df=\left(\alpha-\beta\right)de$
-\end{center}
+\[df=\left(\alpha-\beta\right)de\]
 となる.\\
 　さて,ここで$f$として$e^2$を考えよう.定義から明らかに$e^2=e$である.この両辺を「微分」すると
-\begin{center}
-$\left(de\right)e+ede=de$
-\end{center}
+\[\left(de\right)e+ede=de\]
 この式の両辺から$2eDe$を引けば
-\begin{center}
-$\left(de\right)e-ede=\left({\bf 1}-2e\right)de$
-\end{center}
-を得る.$de$が0でないとすると右辺が$0$でないから,関数eとその導関数deの積が交換可能でないことを意味している.普通の空間の上で微分を考えれば,これは交換可能なはずである！　なんてこった！　2点空間は普通の空間じゃなかったんだよ！（な、なんだってー）これと類似の結果が一般のn点空間でも成り立つ（気力のある方はやってみると計算の練習になる,かも？）.
+\[\left(de\right)e-ede=\left({\bf 1}-2e\right)de\]
+を得る.$de$が0でないとすると右辺が$0$でないから,関数 $e$ とその導関数 $de$ の積が交換可能でないことを意味している.普通の空間の上で微分を考えれば,これは交換可能なはずである！　なんてこった！　2点空間は普通の空間じゃなかったんだよ！（な、なんだってー）これと類似の結果が一般の $n$ 点空間でも成り立つ（気力のある方はやってみると計算の練習になる,かも？）.
 \Subsection{微分について}
 　上で述べた「微分」について,詳しく立ち入るつもりはないが,そのような関数から関数への写像があること,すなわち上の規則をみたす「微分」の存在について述べておく.通常の多様体上の微分形式や微分とDirac作用素との交換関係の類似性をご存知の方はそれを思い出されると,納得しやすいかと思う.\\
 　$C^*$-環がGelfand-Naimarkの定理その2により対応するHilbert空間を$\mathfrak{H}$を考え,一般に$C^*$-環の元と非可換な$\mathfrak{H}$上の有界線型作用素$D$を一つ取り（存在の議論は省略する）,$C^*$-環の元$f$の微分を
-\begin{center}
-$df:=Df-fD$
-\end{center}
+\[df:=Df-fD\]
 により定める.これは先の「微分」がもつべき性質を満たしている.\\
-　先の2点空間上の関数$f=\alpha e+\beta \left({\bf 1}-e\right)$は$M\left(2;\mathbb{C}\right)$の元の中の対角成分が$\alpha,\beta$である2次対角行列に対応している.これに対して適当に対角行列でない行列をとり,それを$D$とすれば,dfは先の定義で確かに微分になる（興味のある方は計算してみてください）.
+　先の2点空間上の関数$f=\alpha e+\beta \left({\bf 1}-e\right)$は$M\left(2;\mathbb{C}\right)$の元の中の対角成分が$\alpha,\beta$である2次対角行列に対応している.これに対して適当に対角行列でない行列をとり,それを$D$とすれば, $df$ は先の定義で確かに微分になる（興味のある方は計算してみてください）.
 \Subsection{非可換トーラス}
-　先のn点空間は微分を考えれば非可換になったが,関数の積自体は可換で,点も具体的に考えられた（$C^*$-環から構成せずに直接空間を定義したので当然ではあるが…）そこでもう少し複雑な例を見ることにしよう.通常のトーラスをもとにした非可換トーラスを考えることができる.簡単のため2次元での「お話」のみを紹介する.トーラス上の関数は周期関数であるから,2次元トーラス上の関数は座標を$\left(x,y\right)$として
-\begin{center}
-$f\left(x,y\right)=\sum_{k,l} a_{kl}e^{ikx}e^{ily}$
-\end{center}
+　先の $n$ 点空間は微分を考えれば非可換になったが,関数の積自体は可換で,点も具体的に考えられた（$C^*$-環から構成せずに直接空間を定義したので当然ではあるが…）そこでもう少し複雑な例を見ることにしよう.通常のトーラスをもとにした非可換トーラスを考えることができる.簡単のため2次元での「お話」のみを紹介する.トーラス上の関数は周期関数であるから,2次元トーラス上の関数は座標を$\left(x,y\right)$として
+\[f\left(x,y\right)=\sum_{k,l} a_{kl}e^{ikx}e^{ily}\]
 と書くことができる.この$e^{ix},e^{iy}$に対し,非可換積を
-\begin{center}
-$e^{ix}*e^{iy}=e^{i\theta}e^{iy}*e^{ix}$
-\end{center}
+\[e^{ix}*e^{iy}=e^{i\theta}e^{iy}*e^{ix}\]
 などで定めて,$e^{ix},e^{iy}$により生成される代数は非可換である.これに対応する非可換空間を非可換トーラスと定める.
 \Section{あとがき}
-　ここまで$C^*$-環から始まって.非可換空間の紹介までしてきましたが,そんなもの何に使うの？という話だけを最期に少しさせていただきます.先に述べた通り,まず物理の量子力学とかかわりがあるのでそちらへの応用が期待されます.また,先のN点空間上の話は格子空間（これは$N^4$点空間です）について,その上で微分を考えると非可換性が現れてしまうことを意味しています.さらには超弦理論も非可換幾何学の性質を持つと言われています.こうした物理学やその背後によって導かれたその先に,非可換幾何学の世界が待っている…のかもしれません.\\
+　ここまで$C^*$-環から始まって.非可換空間の紹介までしてきましたが,そんなもの何に使うの？という話だけを最期に少しさせていただきます.先に述べた通り,まず物理の量子力学とかかわりがあるのでそちらへの応用が期待されます.また,先の $N$ 点空間上の話は格子空間（これは$N^4$点空間です）について,その上で微分を考えると非可換性が現れてしまうことを意味しています.さらには超弦理論も非可換幾何学の性質を持つと言われています.こうした物理学やその背後によって導かれたその先に,非可換幾何学の世界が待っている…のかもしれません.\\
 　あまり「非可換幾何学」及びその入り口に具体的に触れる,ということはできませんでしたが,作用素環の基礎からはじめて非可換幾何学の着想の元となる定理までを紹介いたしました.少しでもその雰囲気を味わっていただけたなら幸いです.
 
 \Subsubsection{参考文献}
