URLを書く時には \url を使う。

--- a/KOMABA2015/ito.tex
+++ b/KOMABA2015/ito.tex
@@ -29,7 +29,7 @@
 この記事では数学科がどのようなことを勉強しているのかについて,
 \textbf{代数学の基本定理}という定理を題材に出来るだけわかりやすく説明したいと思います.
 この記事は第7回関西すうがく徒のつどいにおける拙講演「代数学の基本定理でみる数学の世界」を
-更に詳しくして紙面化したものですので,講演に関してまとめたウェブ上の記事 http://togetter.com/li/878845 も参考にしていただければと思います.
+更に詳しくして紙面化したものですので,講演に関してまとめたウェブ上の記事 \url{http://togetter.com/li/878845} も参考にしていただければと思います.
 \Section{代数学の基本定理とは}
 代数学の基本定理とは
 \thm
@@ -745,7 +745,7 @@ $M$:境界つきコンパクトRiemann多様体. $K$を$M$のガウス曲率. $k
 \thmx
 \proof[微分幾何学による代数学の基本定理の証明]
 \leavevmode\\
-この証明はhttp://arxiv.org/pdf/1106.0924.pdfに載っている証明です.
+この証明は \url{http://arxiv.org/pdf/1106.0924.pdf} に載っている証明です.
 証明のポイント\\
 $p(z)$が零点を持たないと仮定する.\\
 $p^{*}(z) = z_np(1/z) = a_0z_n + a_1z{n-1} + \cdots + a_n$として, $f(z)=p(z)p^*(z)$とする.\\
