arata.tex: 数式の横幅が長かったので複数行に分割。

--- a/KOMABA2015/arata.tex
+++ b/KOMABA2015/arata.tex
@@ -214,12 +214,12 @@ $\gamma(t) \ (0\le t\le 1)$
   積分路のパラメーター表示を
   \[\gamma(t)=(-1-i)(1-t)=(3+2i)t=(4+3i)t-1-i\]
   とおくと，
-  \[
-  \int_\gamma z^2dz
-  =\int_0^1 \gamma(t)^2\gamma'(t)dt
-  =\int_0^1 ((4+3i)t-1-i)^2\cdot(4+3i) dt
-  =-\frac{11}{3}+16i
-  \]
+  \begin{align*}
+    \int_\gamma z^2dz
+    &=\int_0^1 \gamma(t)^2\gamma'(t)dt \\
+    &=\int_0^1 ((4+3i)t-1-i)^2\cdot(4+3i) dt \\
+    &=-\frac{11}{3}+16i
+  \end{align*}
   となります（途中の計算は省略しました）．
 \end{example}
 
