「参考文献」に thebibliography 環境を使う。

--- a/KOMABA2015/TaroNakamura(TN).tex
+++ b/KOMABA2015/TaroNakamura(TN).tex
@@ -181,12 +181,11 @@ $C^*$-環がGelfand-Naimarkの定理その2により対応するHilbert空間を
 
 あまり「非可換幾何学」及びその入り口に具体的に触れる,ということはできませんでしたが,作用素環の基礎からはじめて非可換幾何学の着想の元となる定理までを紹介いたしました.少しでもその雰囲気を味わっていただけたなら幸いです.
 
-\Subsubsection{参考文献}
-\begin{description}
-\item{[1]}Masamichi Takesaki「Theory of Operator Algebras」,Springer
-\item{[2]}Shoichiro Sakai「$C^★$-Algebras and $W^★$-Algebras」,Springer
-\item{[3]}梅垣壽春,大矢雅則,日合文雄「復刊 作用素代数入門」,共立出版株式会社
-\item{[4]}生西明夫,中神祥臣「作用素環入門I　函数解析とフォン・ノイマン環」,岩波書店
-\item{[5]}竹崎正道,「作用素環の構造」,岩波書店
-\item{[6]}綿村哲「非可換幾何学と場の理論」日本物理學會誌vol55,No10,2000,一般社団法人日本物理学会
-\end{description}
+\begin{thebibliography}{9}
+\item Masamichi Takesaki「Theory of Operator Algebras」Springer
+\item Shoichiro Sakai「$C^★$-Algebras and $W^★$-Algebras」Springer
+\item 梅垣壽春,大矢雅則,日合文雄「復刊 作用素代数入門」共立出版株式会社
+\item 生西明夫,中神祥臣「作用素環入門I　函数解析とフォン・ノイマン環」岩波書店
+\item 竹崎正道,「作用素環の構造」岩波書店
+\item 綿村哲「非可換幾何学と場の理論」日本物理學會誌vol55, No10, 2000, 一般社団法人日本物理学会
+\end{thebibliography}
