--- a/KOMABA2015/asaka.tex
+++ b/KOMABA2015/asaka.tex
@@ -228,38 +228,37 @@ $\Leftrightarrow $ $t=s$
 \end{minipage}
 \end{figure}
 これにより,マーキングされたトーラス全体は上半平面と一致する．この上半平面の一点一点がそれぞれ異なるマーキングされたトーラスに対応する．そして,これがトーラスのタイヒミュラー空間である．
-\Section{参考文献}
-%図１７
-\begin{description}
+\begin{thebibliography}{9}
 \item
-$[1]$難波誠『微分積分学』
+難波誠『微分積分学』
 （裳華房，1996）
 \item
-$[2]$齋藤正彦『齋藤正彦線型代数学』
+齋藤正彦『齋藤正彦線型代数学』
 （東京図書，2014）
 \item
-$[3]$斎藤毅『線形代数の世界―抽象数学の入り口』
+斎藤毅『線形代数の世界―抽象数学の入り口』
 （東京大学出版会，2007）
 \item
-$[4]$森田茂之『講座 数学の考え方〈8〉集合と位相空間』
+森田茂之『講座 数学の考え方〈8〉集合と位相空間』
 （朝倉書店，2002）
 \item
-$[5]$斎藤毅『集合と位相』
-(東京大学出版会，2009)
+斎藤毅『集合と位相』
+（東京大学出版会，2009）
 \item
-$[6]$松本幸夫『多様体の基礎』
-｛東京大学出版会,1988）
+松本幸夫『多様体の基礎』
+（東京大学出版会，1988）
 \item
-$[7]$野口潤次郎『複素解析概論』
+野口潤次郎『複素解析概論』
 （裳華房，1993）
 \item
-$[8]$楠幸男『函数論―リーマン面と等角写像』
+楠幸男『函数論―リーマン面と等角写像』
 （朝倉書店，2011）
 \item
-$[9]$今吉，谷口『タイヒミュラー空間論』
+今吉，谷口『タイヒミュラー空間論』
 （日本評論社，2004）
-\end{description}
-タイヒミュラー空間に関する日本語の本は今のところ$[9]$しかない。そしてその本までたどりつくには少し長い道のりがある。大学１年で習う解析学と線形代数学の初歩をまず学ばなくてはいけない。前者の一例として$[1]$を,後者の例として$[2]，[3]$をあげてみた。[2]より[3]の方がより高度に書かれている。そして,大学２年で習う位相については$[4]，[5]$をあげてみた。$[4]$より$[5]$の方がまた高度に書かれている。以上を踏まえて大学３年で習う,多様体と複素解析の入門書としてそれぞれ$[6]，[7]$をあげてみた。これらを踏まえ$[8]$の第$4$章まで読めれば，$[9]$の第１章にあるトーラスのタイヒミュラー空間の内容を数学的にきちんと捉えられるのではないかと思う。
+\end{thebibliography}
+
+タイヒミュラー空間に関する日本語の本は今のところ[9]しかない。そしてその本までたどりつくには少し長い道のりがある。大学１年で習う解析学と線形代数学の初歩をまず学ばなくてはいけない。前者の一例として[1]を,後者の例として[2], [3]をあげてみた。[2]より[3]の方がより高度に書かれている。そして,大学２年で習う位相については[4], [5]をあげてみた。[4]より[5]の方がまた高度に書かれている。以上を踏まえて大学３年で習う,多様体と複素解析の入門書としてそれぞれ[6], [7]をあげてみた。これらを踏まえ[8]の第4章まで読めれば，[9]の第１章にあるトーラスのタイヒミュラー空間の内容を数学的にきちんと捉えられるのではないかと思う。
 
 数学書はとても多くあるにも関わらず,ごく少ない知識で選んでしまったので,ぜひ自分で書店で選んでみてください。以上です。
 
