--- a/KOMABA2015/maegaki.tex
+++ b/KOMABA2015/maegaki.tex
@@ -1,5 +1,13 @@
-本日は「数学科展示　ますらぼ」にご来場いただき誠にありがとうございます。本企画は2年前に数学科2013年度進学の先輩方(現在多くの方が修士1年生となっています)が始めたもので、それを私達数学科2015年度進学(現在学部3年生)が引き継いだものです。つまり「ますらぼ」という企画名や「$e^{\pi i}sode$（えぴそーど）」という冊子の名前こそ受け継いでいますし、先輩方からご協力・ご指導は頂いていますが、運営している人間はガラッと変わった企画となっています。数学科や「ますらぼ」という名前に泥を塗らないように頑張りたいと思います。\par
-東京大学理学部数学科・大学院数理科学研究科は駒場Ⅰキャンパスにある学科・研究科です。数学科には東大中の数学を愛する天才・秀才たち約45名が集まります。私達が日々勉強・研究を行う``数理科学研究棟''（別名数理病棟）では、個性豊かな数学を愛する人達が飛んだりはねたり踊ったりしています。院試にじゃがいもを持ってくる人やインターネット上で女子大生と仮定しても矛盾しない発言を繰り返す人や院試の合格発表から逃げるために山にこもる人やいつも裸足で大学に来る人や友人の誕生日をすべて暗記している人や美術や音楽や経済学などの才能もある山岳ガイドや自称女子小学生などがいます。（もちろん普通な人もたくさんいて多種多様な学科ですが、みな数学が好きという共通点によってまとまりを持っています。）みんなとても面白い人ばかりでここに書いていたらきりがありません。私はこの学科が大好きです。この大好きな学科のありのままの姿を伝えたくて、駒場から本郷まで井の頭線と銀座線と丸ノ内線を乗り継いでやって来ました。\par
-そんな私の大好きな数学科が有志で作り上げたこの冊子$e^{\pi i}sode$も今回でvol.3となりました。vol.1では岡潔やブルバキ、ワイエルシュトラスなどの数学者の伝記、vol.2では古田教授へのインタビューや数学科・大学院数理科学研究科の学生へのアンケートや4年生のセミナーの紹介などをしました。vol.3では、数学的なバックグラウンドを持つ方だけでなく数学好きの高校生や一般の方などにも読んでもらえるような記事をたくさん揃えました。普段数学に慣れ親しんでいない方には、数式がたくさん並んでいてびっくりしてしまうかもしれませんが、じっくり読んでいただければと思います。\par　
-本企画・冊子を通じて数学に興味を持っていただけたのならば、私達にとってこれほどまでに嬉しい事はありません。図書館や大きな書店に行って数学書を手に入れれば家にいながらさらに広い数学の世界を旅する事ができます。東大数学科に興味を持ったという場合は高校生や大学生向けに説明会を開いていますので是非参加してみてください。
-（伊藤充城）
+本日は「数学科展示　ますらぼ」にご来場いただき誠にありがとうございます。今年5月に東京大学本郷キャンパスで開かれた五月祭に引き続き,
+数学とはなんなのか,数学科とはどんなことをしているところなのか,数学にはどんな人がいるのかを知ってもらいたくて,数学科展示ますらぼは駒場祭にも出展することを決めました.
+今回の冊子$e\pi isode$$(えぴそーど)$は,vol 3.5と題して発行され, またサブタイトルは「わたしのえぴそーど」と題しまして,数学科内定したばかりのの学部$2$年生,
+先日発表された数学講究XAに夢をふくらませる$3$年生,院試を終えたばかりの$4$年生,そしてこの企画が始まって以来ずっとコミットしてきた修士$1$年生という
+幅広い層の方たちに自分が好きなものとそのエピソードについて語ってもらいました.執筆者のみなさんには$1$ページから$2$ページで軽く書いてくれるだけで良いよと言っていたのですが,
+募集からわずか$2$週間というとても短い期間でみなさんこれだけたくさんの内容を書いてくださり,またしても濃い内容の冊子が出来上がりました.\par
+数学科はこの駒場キャンパスの東の端にある数理科学研究棟で普段は活動していますが,皆さんからは"数理病棟"と呼ばれたり,他の学科の人に自分が今何を勉強しているのかを
+説明しようとすると全く理解してもらえなかったりと周囲から距離を感じることがあります.しかし,数学というのはとてもシンプルにまた何に縛られることもなく物事にアプローチをする手段であり,
+数学をすることによって培われる技能というのは普遍的でどこの分野に言っても通じるものであると僕は信じていますし,その面白さは丁寧に話しあえば多くの人に理解してもらえるし,
+また他の分野と何か共通点があるものであると,この数学科展示ますらぼを通じて実感しています.この冊子を開くと数式や難しそうな言葉がたくさん並べてあって,
+"うわっ..."っと一歩引いてしまう方も沢山いらっしゃいると思います.でも,そんな時は"このの何が面白いんですか"や"何の役に立つんですか"といった
+質問でも良いので私たちに投げつけて見てください.きっと何か得るものはあると思います.
+（伊藤）
