xbb ファイルを削除。
最近の TeX Live なら extractbb を自動実行してくれるので xbb ファイルを用意したり \includegraphics の bb オプションを指定する必要はない。

--- a/KOMABA2015/asaka.tex
+++ b/KOMABA2015/asaka.tex
@@ -34,7 +34,7 @@
 を切り抜くことにする．そして,対辺をそれぞれ貼り合わせると
 \\
 \begin{figure}[h]
-\includegraphics[width=8cm,bb=0 0 452 217]{asaka3.png}
+\includegraphics[width=8cm]{asaka3.png}
 \end{figure}
 とドーナツの表面となった．これがトーラスである．
 
