--- a/KOMABA2015/maegaki.tex
+++ b/KOMABA2015/maegaki.tex
@@ -6,8 +6,8 @@
 募集からわずか$2$週間というとても短い期間でみなさんこれだけたくさんの内容を書いてくださり,またしても濃い内容の冊子が出来上がりました.\par
 数学科はこの駒場キャンパスの東の端にある数理科学研究棟で普段は活動していますが,皆さんからは"数理病棟"と呼ばれたり,他の学科の人に自分が今何を勉強しているのかを
 説明しようとすると全く理解してもらえなかったりと周囲から距離を感じることがあります.しかし,数学というのはとてもシンプルにまた何に縛られることもなく物事にアプローチをする手段であり,
-数学をすることによって培われる技能というのは普遍的でどこの分野に言っても通じるものであると僕は信じていますし,その面白さは丁寧に話しあえば多くの人に理解してもらえるし,
+数学をすることによって培われる技能というのは普遍的でどこの分野に於いても通じるものであると私は信じていますし,その面白さは丁寧に話しあえば多くの人に理解してもらえるし,
 また他の分野と何か共通点があるものであると,この数学科展示ますらぼを通じて実感しています.この冊子を開くと数式や難しそうな言葉がたくさん並べてあって,
-"うわっ..."っと一歩引いてしまう方も沢山いらっしゃいると思います.でも,そんな時は"このの何が面白いんですか"や"何の役に立つんですか"といった
+"うわっ..."っと一歩引いてしまう方も沢山いらっしゃいると思います.でも,そんな時は"この何が面白いんですか"や"何の役に立つんですか"といった
 質問でも良いので私たちに投げつけて見てください.きっと何か得るものはあると思います.
 （伊藤）
