--- a/KOMABA2015/main.tex
+++ b/KOMABA2015/main.tex
@@ -48,7 +48,8 @@
   arrows.meta,%
   %decorations.pathreplacing,%
   decorations.markings,%
-  shapes.misc%
+  shapes.misc,%
+  patterns
 }
 
 
@@ -134,6 +135,7 @@
 \newtheorem{theorem}{定理}
 \theoremstyle{remark}
 \newtheorem{example}{例}
+\newtheorem{exercise}[example]{問題}
 
 
 %本文
