--- a/KOMABA2015/maegaki.tex
+++ b/KOMABA2015/maegaki.tex
@@ -1,5 +1,5 @@
-本日は「数学科展示　ますらぼ」にご来場いただき誠にありがとうございます。今年5月に東京大学本郷キャンパスで開かれた五月祭に引き続き,
-数学とはなんなのか,数学科とはどんなことをしているところなのか,数学にはどんな人がいるのかを知ってもらいたくて,数学科展示ますらぼは駒場祭にも出展することを決めました.
+本日は「数学科展示　ますらぼ」にご来場いただき誠にありがとうございます.今年5月に東京大学本郷キャンパスで開かれた五月祭に引き続き,
+皆さんに数学と東大数学科について知ってもらいたくて,数学科展示ますらぼは駒場祭にも出展することを決めました.
 今回の冊子$e\pi isode$$(えぴそーど)$は,vol 3.5と題して発行され, またサブタイトルは「わたしのえぴそーど」と題しまして,数学科内定したばかりのの学部$2$年生,
 先日発表された数学講究XAに夢をふくらませる$3$年生,院試を終えたばかりの$4$年生,そしてこの企画が始まって以来ずっとコミットしてきた修士$1$年生という
 幅広い層の方たちに自分が好きなものとそのエピソードについて語ってもらいました.執筆者のみなさんには$1$ページから$2$ページで軽く書いてくれるだけで良いよと言っていたのですが,
