--- a/KOMABA2015/main.tex
+++ b/KOMABA2015/main.tex
@@ -147,9 +147,13 @@
 \mainmatter
 %\input{example}
 \input{asaka}
+\input{kobaken1.tex}
 \input{TaroNakamura(TN)}
+\input{kobaken2.tex}
 \input{ito}
+\input{kobaken3.tex}
 \input{arata}
+\input{kobaken4.tex}
 %\Chapter{編集後記}
 %\input{atogaki}
 
