--- a/KOMABA2015/main.tex
+++ b/KOMABA2015/main.tex
@@ -7,6 +7,7 @@
 \usepackage{standalone}
 \usepackage{hyperref}
 \usepackage{pxjahyper}
+\usepackage{natbib} 
 
 %プリアンブル
 \topmargin -0.5in
@@ -165,6 +166,7 @@
 \input{kobaken1.tex}
 \input{asaka}
 \input{kobaken2.tex}
+\input{osawa.tex}
 \input{TaroNakamura(TN)}
 \input{kobaken3.tex}
 \input{YukiYamamoto.tex}
