--- a/KOMABA2015/mainb5.tex
+++ b/KOMABA2015/mainb5.tex
@@ -165,6 +165,7 @@
 \input{kobaken1b5.tex}
 \input{asaka}
 \input{kobaken2b5.tex}
+\input{osawa.tex}
 \input{TaroNakamura(TN)}
 \input{kobaken3b5.tex}
 \input{YukiYamamoto.tex}
